:bug:fix GitHub link breaks on mobile

--- a/frontend/src/assets/style/index.css
+++ b/frontend/src/assets/style/index.css
@@ -89,3 +89,10 @@
     opacity: 1;
   }
 }
+
+
+@media (max-width: 767px) {
+  .github-icon {
+    display: none;
+  }
+}
